--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.password=
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
-
 spring.jpa.show-sql=false
+
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
