--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
