--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+#logging.level.org.hibernate=DEBUG
 
-logging.level.org.hibernate=DEBUG
+#debug=true
