image entity is added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
-server.host = localhost
 server.port = 8080
+
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 
