--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rental_hive?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/rental_hive1?createDatabaseIfNotExist=true
 spring.datasource.password=
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,4 +8,4 @@ spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 server.host = localhost
-server.port = 8081
+server.port = 8082
