--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rental_hive3?createDatabaseIfN
 spring.datasource.password=
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.main.allow-circular-references=true
 spring.jpa.hibernate.ddl-auto=none
+logging.file.name=Logfile
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 server.host = localhost
 server.port = 8080
+
