--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.1.0</version>
+<!--			<version>8.1.0</version>-->
 			<scope>runtime</scope>
 		</dependency>
 
@@ -50,6 +50,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.26</version>
 		</dependency>
 
 		<dependency>
@@ -75,10 +80,10 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.h2database</groupId>-->
+<!--			<artifactId>h2</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -91,19 +96,4 @@
 		</dependency>
 
 	</dependencies>
-
-	<build>
-		<!--		<plugins>-->
-		<!--			<plugin>-->
-		<!--				<groupId>org.springframework.boot</groupId>-->
-		<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-		<!--				<configuration>-->
-		<!--					<image>-->
-		<!--						<builder>paketobuildpacks/builder-jammy-base:latest</builder>-->
-		<!--					</image>-->
-		<!--				</configuration>-->
-		<!--			</plugin>-->
-		<!--		</plugins>-->
-	</build>
-
 </project>
