--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rental_hive3?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/rental_hive?createDatabaseIfNotExist=true
 spring.datasource.password=
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
