--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,11 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.24.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.26</version>
+		</dependency>
 		<!--		<dependency>-->
 		<!--			<groupId>org.hibernate</groupId>-->
 		<!--			<artifactId>hibernate-core</artifactId>-->
